edited the text color for submission fields

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <title>Dopetrope by HTML5 UP</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  </head>
+    <!-- Display the application -->
+    <body>
+
     <link rel="stylesheet" href="assets/css/main.css" />
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/font-awesome.min.css" rel="stylesheet">
@@ -24,5 +28,4 @@
 		<script src="assets/js/breakpoints.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
-	</body>
 </html>
