--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,6 @@
 </body>
 </html>
 
-
-
       <!-- Main -->
         <section id="main">
           <div class="container">
@@ -65,12 +63,6 @@
         </section>
     </div>
 
-
-
-
-    <div id="app"></div>
- 
-
     <!-- core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/font-awesome.min.css" rel="stylesheet">
@@ -78,7 +70,7 @@
     <link href="/css/prettyPhoto.css" rel="stylesheet">
     <link href="/css/main.css" rel="stylesheet">
     <link href="/css/responsive.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="/assets/css/main.css" />
       
 
     <script src="/js/jquery.js"></script>
@@ -87,11 +79,11 @@
     <script src="/js/jquery.isotope.min.js"></script>
     <script src="/js/main.js"></script>
     <script src="/js/wow.min.js"></script>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.dropotron.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/jquery.min.js"></script>
+    <script src="/assets/js/jquery.dropotron.min.js"></script>
+    <script src="/assets/js/browser.min.js"></script>
+    <script src="/assets/js/breakpoints.min.js"></script>
+    <script src="/assets/js/util.js"></script>
+    <script src="/assets/js/main.js"></script>
   </body>
 </html>
